--- a/SpringBoot-shiro/pom.xml
+++ b/SpringBoot-shiro/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>SpringBoot-minio</artifactId>
+    <artifactId>SpringBoot-shiro</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -22,21 +22,12 @@
             <artifactId>SpringBoot-common</artifactId>
             <version>1.0</version>
         </dependency>
-        <!--        minio-->
+        <!--shiro-->
+        <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
         <dependency>
-            <groupId>io.minio</groupId>
-            <artifactId>minio</artifactId>
-            <version>8.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>me.tongfei</groupId>
-            <artifactId>progressbar</artifactId>
-            <version>0.5.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.8.1</version>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.10.0</version>
         </dependency>
     </dependencies>
 
