--- a/SpringBoot-common/pom.xml
+++ b/SpringBoot-common/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- lombok依赖 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok-version}</version>
+        </dependency>
         <!--web启动器,对springmvc,serlvet等支持-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
