--- a/SpringBoot-shiro/src/main/resources/application.yml
+++ b/SpringBoot-shiro/src/main/resources/application.yml
@@ -2,9 +2,33 @@
 server:
   port: 1266
 
+spring:
+  application:
+    name: SpringBoot
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.99.102:3306/minio?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+    username: root
+    password: root517230
+
+#mybatis-plus
+mybatis-plus:
+  mapper-locations: classpath:mapper/**/*.xml
+  typeAliasesPackage: xyz.onlytype.*.entity
+  global-config:
+    db-config:
+      logic-delete-value: 0
+      logic-not-delete-value: 1
+      logic-delete-field: deleted
+  configuration:
+    map-underscore-to-camel-case: true
+    cache-enabled: false
+    call-setters-on-nulls: true
+
 logging:
   level:
-    root: info
+    xyz.onlytype.*.dao: debug
 
 knife4j:
   # 开启增强配置
