--- a/SpringBoot-shiro/pom.xml
+++ b/SpringBoot-shiro/pom.xml
@@ -44,5 +44,9 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
     </dependencies>
 </project>
