--- a/springboot-minio/src/main/resources/application.yml
+++ b/springboot-minio/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
       max-request-size: 100MB
 # minio 参数配置
 minio:
-  ip: http://192.168.99.238:9000  # 管理端口
+  ip: http://192.168.99.102:9000  # 管理端口
   username: root    #登录用户，可以自己创建其他用户
   password: root123456
-  bucket: "test"  #Bucket的名称
+  bucket: "my-bucketname"  #Bucket的名称
 
 logging:
   level:
