--- a/SpringBoot-common/pom.xml
+++ b/SpringBoot-common/pom.xml
@@ -27,6 +27,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!--swagger-ui-->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
