--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>SpringBoot-common</module>
         <module>springboot-minio</module>
         <module>springboot-springsecurity</module>
+        <module>SpringBoot-Admin</module>
+        <module>SpringBoot-admin</module>
     </modules>
     <!--    springboot版本-->
     <parent>
@@ -47,7 +49,6 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok-version}</version>
-                <scope>provided</scope>
             </dependency>
             <!--mybatis-plus依赖-->
             <dependency>
@@ -93,15 +94,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <!-- lombok依赖 -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 
 
 </project>
