--- a/SpringBoot-admin/src/main/resources/application.yml
+++ b/SpringBoot-admin/src/main/resources/application.yml
@@ -3,17 +3,49 @@ server:
   port: 1266
 
 spring:
+  application:
+    name: springboot-admin
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.99.102:3306/minio?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+    username: root
+    password: root517230
+  #redis配置
+  redis:
+    host: 192.168.99.102
+    port: 6379
+    password: root517230
+    timeout: 10000
+  mail:
+    protocol: smtp # 邮件协议
+    host: smtp.163.com # 网易邮箱smtp服务器地址
+    port: 25
+    username: m15319631269@163.com  # 发件人邮箱地址
+    password: PIEREBBVCSICPISL # 授权码
+    properties:
+      mail:
+        debug: true # 完整打印发邮件日志
+    default-encoding: UTF-8
+
   # 配置文件上传大小限制
   servlet:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
-# minio 参数配置
-minio:
-  ip: http://192.168.99.102:9000  # 管理端口
-  username: root    #登录用户，可以自己创建其他用户
-  password: root123456
-  bucket: "test"  #Bucket的名称
+#mybatis-plus
+mybatis-plus:
+  mapper-locations: classpath:mapper/**/*.xml
+  typeAliasesPackage: xyz.onlytype.*.entity
+  global-config:
+    db-config:
+      logic-delete-value: 0
+      logic-not-delete-value: 1
+      logic-delete-field: deleted
+  configuration:
+    map-underscore-to-camel-case: true  # 开启驼峰映射
+    cache-enabled: false
+    call-setters-on-nulls: true
 
 logging:
   level:
@@ -25,3 +57,16 @@ knife4j:
   setting:
     # 是否开启动态参数调试功能,默认关闭
     enableDynamicParameter: true
+# minio 参数配置
+minio:
+  ip: http://192.168.99.102:9000  # 管理端口
+  username: root    #登录用户，可以自己创建其他用户
+  password: root123456
+  bucket: "test"  #Bucket的名称
+
+# token配置
+token:
+  # 令牌密钥
+  secret: $A@YgW@Ws4
+  # 令牌有效期（默认30分钟）
+  expireTime: 30
